[package]
authors = ["Jonathan BAUDIN <jjbaudin@gmail.com>"]
name = "steami-rs"
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Board support crate for the STeaMi (steami.cc)"
homepage = "https://steami.cc"
repository = "https://github.com/jnthbdn/steami-rs"
readme = "README.md"

[dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = {version = "^0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
critical-section = "^1.1.2"

#rtic = { version = "^2.0.1", features = ["thumbv7-backend"] }

# Change this import as required for your MCU.
hal = { package = "stm32-hal2", version = "^1.8.3", features = ["wb55"]}

[dev-dependencies]
circular-buffer = { version = "0.1.9", default-features = false }
embedded-alloc = "0.6.0"
jacdac-rs = {path = "../jacdac-rs"}


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# # # cargo test
# # [profile.test]
# # codegen-units = 1
# # debug = 2
# # debug-assertions = true # <-
# # incremental = false
# # opt-level = 3 # <-
# # overflow-checks = true # <-

# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3 # <-
# overflow-checks = false # <-

# # # cargo test --release
# # [profile.bench]
# # codegen-units = 1
# # debug = 2
# # debug-assertions = false # <-
# # incremental = false
# # lto = 'fat'
# # opt-level = 3 # <-
# # overflow-checks = false # <-